# bob

./: Cargo.toml  README.md  docker-build.sh  push.sh
docker/: Dockerfile  docker-compose.yaml
src/: lib.rs  main.rs
tests/: deserialize.rs  tiny.json
