[package]
name = "bob"
version = "0.1.0"
authors = ["Peter Segerstedt <peter@segerstedts.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.0"
log = "0.4"
env_logger = "0.8"
serde = "1"
serde_json="1"